--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <div class="hearts-bg"></div>
 
     <div class="container">
-        <h1>Will you be my Valentine Minamma 😜? 💕</h1>
+        <h1>Will you be my 
+            Valentine 
+            Minamma😜? 💕</h1>
 
         <div class="gif-container">
-            <img id="ourmrg" src="music/mrg.jpg" width="300" height="250"/>
+            <img id="ourmrg" src="music/mrg.jpg" width="180" height="150"/>
             <img id="cat-gif" src="https://media.tenor.com/EBV7OT7ACfwAAAAj/u-u-qua-qua-u-quaa.gif" alt="cute character">
         </div>
 
