--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Minamma😜? 💕</h1>
 
         <div class="gif-container">
-            <img id="ourmrg" src="music/mrg.jpg" width="180" height="150"/>
+            <!--<img id="ourmrg" src="music/mrg.jpg" width="180" height="150"/>-->
             <img id="cat-gif" src="https://media.tenor.com/EBV7OT7ACfwAAAAj/u-u-qua-qua-u-quaa.gif" alt="cute character">
         </div>
 
